chore: add Brian to text

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="resource-list">
   <h2>
-      Here are some resources to help you on your Angular + Netlify journey:
+      Brian: Here are some resources to help you on your Angular + Netlify journey:
   </h2>
   <ul>
     <li>
